Thu Sep  8 08:16:35 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Lib_Find.cpp:
          Add support for ACE_DEFAULT_TEMP_DIR

        * ace/MEM_Stream.h:
          Added missing export include

        * ace/OS_NS_unistd.cpp:
          Added ACE_HAS_NONCONST_PWRITE

        * ace/Select_Reactor_Base.cpp:
          Layout change

        * include/makeinclude/platform_android_linux.GNU:
          Use ?= to make an override possible from platform_macros.GNU

Thu Sep  8 08:14:46 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ConfigList.pm:
        * bin/PerlACE/Process.pm:
        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/ProcessLVRT.pm:
        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
        * bin/PerlACE/ProcessWinCE.pm:
        * bin/PerlACE/ProcessWinCE_Unix.pm:
        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/Process_VMS.pm:
        * bin/PerlACE/Process_Win32.pm:
        * bin/PerlACE/Run_Test.pm:
        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_Android.pm:
        * bin/PerlACE/TestTarget_LVRT.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:
        * bin/PerlACE/TestTarget_WinCE.pm:
          Extensions to run automatically tests on an Android emulator

Tue Sep  6 09:36:36 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Removed rnq option, that is now default, added versioned namespace
          support

Wed Aug 31 11:43:13 UTC 2011  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_iOS.GNU:

          Minor updates to this file to work with Mac OSX Lion (10.7)

Wed Aug 31 11:33:39 UTC 2011  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-iOS-hardware.h:
        * ace/config-macosx-iOS-simulator.h:
        * include/makeinclude/platform_macosx_iOS.GNU:
